--- a/manifest.json
+++ b/manifest.json
@@ -2,21 +2,65 @@
   "name": "Grocery Shopping App",
   "short_name": "GroceryApp",
   "description": "A mobile-optimized grocery shopping list app with master inventory management",
-  "start_url": "./src/index.html",
-  "display": "standalone",
+  "start_url": "./index.html",
+  "display": "fullscreen",
+  "display_override": ["fullscreen", "standalone", "minimal-ui"],
   "background_color": "#2563eb",
   "theme_color": "#2563eb",
   "orientation": "portrait-primary",
   "categories": ["shopping", "productivity", "lifestyle"],
+  "scope": "/",
   "icons": [
     {
-      "src": "src/assets/icons/icon-192.png",
+      "src": "assets/icons/logo.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any"
+    },
+    {
+      "src": "assets/icons/icon-72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "assets/icons/icon-96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "assets/icons/icon-128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "assets/icons/icon-144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "assets/icons/icon-152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "assets/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "src/assets/icons/icon-512.png",
+      "src": "assets/icons/icon-384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "assets/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -27,17 +71,21 @@
       "name": "Add to Master List",
       "short_name": "Add Item",
       "description": "Quickly add items to your master inventory",
-      "url": "./src/index.html?tab=master&action=add",
-      "icons": [{ "src": "src/assets/icons/add.svg", "sizes": "96x96" }]
+      "url": "./index.html?tab=master&action=add",
+      "icons": [{ "src": "assets/icons/add.svg", "sizes": "96x96" }]
     },
     {
       "name": "Shopping List",
       "short_name": "Shop",
       "description": "View your current shopping list",
-      "url": "./src/index.html?tab=shopping",
-      "icons": [{ "src": "src/assets/icons/check.svg", "sizes": "96x96" }]
+      "url": "./index.html?tab=shopping",
+      "icons": [{ "src": "assets/icons/check.svg", "sizes": "96x96" }]
     }
   ],
   "lang": "en",
-  "dir": "ltr"
+  "dir": "ltr",
+  "prefer_related_applications": false,
+  "edge_side_panel": {
+    "preferred_width": 480
+  }
 }
